# Ogma

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  UFAFAC.sln  WindowsRelease.bat
OGMA/: CMakeLists.txt
OGMA/Headers/: App.hpp  ReleaseData.hpp  stdafx.hpp
OGMA/Headers/Core/: Types.hpp  UtilsStruct.hpp  Window.hpp
OGMA/Sources/: App.cpp  ReleaseData.cpp  main.cpp
OGMA/Sources/Core/: Window.cpp
UFAFAC/: Editor.h  Editor.resx  Main.h  Main.resx  TagManager.h  TagWindow.h  UFAFAC.rc  UFAFAC.vcxproj  UFAFAC.vcxproj.filters  Viewer.h  Viewer.resx  resource.h
UFAFAC/Headers/: IsEditor.hpp  Utils.h
UFAFAC/Headers/Core/: Types.hpp
UFAFAC/Headers/DataStructure/: Data.h  DataBase.hpp  DataBaseEntry.hpp  File.h  StringsHolder.hpp  Tag.h  TagManager.hpp
UFAFAC/Headers/Parsing/: Conversion.hpp  Deserializer.hpp  FileCompressor.hpp  FileParser.hpp  Serializer.hpp
UFAFAC/Sources/: Editor.cpp  Main.cpp  TagManager.cpp  TagWindow.cpp  Utils.cpp  Viewer.cpp
UFAFAC/Sources/DataStructure/: DataBase.cpp  StringsHolder.cpp  TagManager.cpp
UFAFAC/Sources/Parsing/: Conversion.cpp  Deserializer.cpp  FileCompressor.cpp  FileParser.cpp  Serializer.cpp
